--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
@@ -9,8 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="146dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/pt_username"
@@ -23,11 +24,45 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/pt_username"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="68dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="208dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/pt_password"
         android:inputType="textPersonName|textPassword"
         android:text="@string/pt_password" />
+
+    <Button
+        android:id="@+id/btn_login"
+        android:layout_width="246dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="51dp"
+        android:layout_marginBottom="193dp"
+        android:text="@string/btn_login" />
+
+    <TextView
+        android:id="@+id/tvbtn_register"
+        android:layout_width="118dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="116dp"
+        android:layout_marginBottom="163dp"
+        android:text="@string/tv_register"
+        android:textAlignment="center"
+        android:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/img_movie_pic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="18dp"
+        android:contentDescription="@string/img_myMoviePic"
+        app:srcCompat="@drawable/movies_logo" />
 
 </RelativeLayout>
